--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -23,16 +23,20 @@ jobs:
       - name: Build
         run: cmake --build ${{github.workspace}}/csharp-api/build --config ${{env.BUILD_TYPE}} --target ALL_BUILD
       
-      - name: Compress release
+      - name: Prepare release
         run: |
           pip install -r ${{github.workspace}}/csharp-api/requirements.txt
           python ${{github.workspace}}/csharp-api/make_symlinks.py --gamedir="${{github.workspace}}/csharp-api" --bindir="${{github.workspace}}/csharp-api/build/bin" --just_copy=Tru
+
+      - name: Compress release
+        run: |
+          7z a ${{github.workspace}}/${{matrix.target}}.zip ${{github.workspace}}/csharp-api/reframework/*
 
       - name: Upload artifacts
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3
         with:
           name: ${{matrix.target}}
-          path: ${{github.workspace}}/csharp-api/reframework/
+          path: ${{github.workspace}}/${{matrix.target}}.zip
           if-no-files-found: error
 
   dev-release:
@@ -75,7 +79,7 @@ jobs:
     
   nightly-push:
     runs-on: windows-latest
-    needs: dev-release
+    needs: [dev-release, csharp-release]
     if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout
