--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -24,9 +24,10 @@ jobs:
         run: cmake --build ${{github.workspace}}/csharp-api/build --config ${{env.BUILD_TYPE}} --target ALL_BUILD
       
       - name: Prepare release
+        working-directory: ${{github.workspace}}/csharp-api
         run: |
-          pip install -r ${{github.workspace}}/csharp-api/requirements.txt
-          python ${{github.workspace}}/csharp-api/make_symlinks.py --gamedir="${{github.workspace}}/csharp-api" --bindir="${{github.workspace}}/csharp-api/build/bin" --just_copy=Tru
+          pip install -r requirements.txt
+          python make_symlinks.py --gamedir="${{github.workspace}}/csharp-api" --bindir="${{github.workspace}}/csharp-api/build/bin" --just_copy=True
 
       - name: Compress release
         run: |
