--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -30,8 +30,9 @@ jobs:
           python make_symlinks.py --gamedir="${{github.workspace}}/csharp-api" --bindir="${{github.workspace}}/csharp-api/build/bin" --just_copy=True
 
       - name: Compress release
+        working-directory: ${{github.workspace}}/csharp-api
         run: |
-          7z a ${{github.workspace}}/${{matrix.target}}.zip ${{github.workspace}}/csharp-api/reframework/*
+          7z a ${{github.workspace}}/${{matrix.target}}.zip reframework
 
       - name: Upload artifacts
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3
