ExceptionHandler: Add richer callstack naming

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,8 @@ project(reframework
 		CSharp
 )
 
+include(CSharpUtilities)
+
 set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /MP")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
@@ -2142,6 +2144,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -2341,6 +2345,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -4191,6 +4197,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -4390,6 +4398,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -4589,6 +4599,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -7266,6 +7278,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -7465,6 +7479,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -8491,6 +8507,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -9515,6 +9533,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -10541,6 +10561,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -11567,6 +11589,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -12593,6 +12617,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -13619,6 +13645,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -14645,6 +14673,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
@@ -15671,6 +15701,8 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		"src/mods/LooseFileLoader.hpp"
 		"src/mods/ManualFlashlight.cpp"
 		"src/mods/ManualFlashlight.hpp"
+		"src/mods/MethodDatabase.cpp"
+		"src/mods/MethodDatabase.hpp"
 		"src/mods/PluginLoader.cpp"
 		"src/mods/PluginLoader.hpp"
 		"src/mods/REFrameworkConfig.cpp"
