.NET: Migrate to Hexa.NET.ImGui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2215,6 +2215,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -2416,6 +2417,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -4268,6 +4270,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -4469,6 +4472,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -4670,6 +4674,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -7349,6 +7354,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -7550,6 +7556,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -8578,6 +8585,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -9604,6 +9612,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -10632,6 +10641,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -11660,6 +11670,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -12688,6 +12699,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -13716,6 +13728,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -14744,6 +14757,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
@@ -15772,6 +15786,7 @@ if(REF_BUILD_FRAMEWORK AND CMAKE_SIZEOF_VOID_P EQUAL 8) # build-framework
 		${CMKR_TARGET}
 		REFRAMEWORK_EXPORTS
 		"REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""
+		CIMGUI_VARGS0
 	)
 
 	if(DEVELOPER_MODE) # developer-mode-cond
