--- a/cmake.toml
+++ b/cmake.toml
@@ -248,7 +248,7 @@ include-directories = ["shared/", "src/", "include/", "${OPENXR_SOURCE_DIR}/src"
 link-directories = ["dependencies/openvr/lib/win64/"]
 compile-options = ["/GS-", "/bigobj", "/EHa"]
 compile-features = ["cxx_std_23"]
-compile-definitions = ["${CMKR_TARGET}", "REFRAMEWORK_EXPORTS", "REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\""]
+compile-definitions = ["${CMKR_TARGET}", "REFRAMEWORK_EXPORTS", "REFRAMEWORK_GAME_NAME=\"${CMKR_TARGET}\"", "CIMGUI_VARGS0"]
 developer-mode-cond.compile-definitions = ["DEVELOPER"]
 link-libraries = [
     "${CMKR_TARGET}SDK",
