--- a/csharp-api/cmake.toml
+++ b/csharp-api/cmake.toml
@@ -270,13 +270,13 @@ cmake-after = """
 set_dotnet_references(CSharpAPITestMHWilds "mhwilds" "${MHWILDS_DLLS}")
 """
 
-[target.CSharpAPITestMHWildsWebAPI]
+[target.CSharpAPITestWebAPI]
 condition = "build-csharp-test-mhwilds"
 type = "CSharpSharedTarget"
-sources = ["test/Test/TestMHWildsWebAPI.cs"]
+sources = ["test/Test/TestWebAPI.cs"]
 link-libraries = ["csharp-api"]
 cmake-after = """
-set_dotnet_references(CSharpAPITestMHWildsWebAPI "mhwilds" "${MHWILDS_DLLS}")
+set_dotnet_references(CSharpAPITestWebAPI "mhwilds" "${MHWILDS_DLLS}")
 """
 
 [target.CSharpAPITestRE9]
