--- a/csharp-api/CMakeLists.txt
+++ b/csharp-api/CMakeLists.txt
@@ -161,6 +161,7 @@ set(REFCoreDeps_SOURCES
 	"REFCoreDeps/Compiler.cs"
 	"REFCoreDeps/GarbageCollectionDisplay.cs"
 	"REFCoreDeps/HashHelper.cs"
+	"REFCoreDeps/PipeServer.cs"
 	cmake.toml
 )
 
